logs/omnomnom.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_nanomsg_ctypes'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/examples'...
Listing './lib/python3.5/site-packages/examples/benchmarks'...
Listing './lib/python3.5/site-packages/examples/pub_sub'...
Compiling './lib/python3.5/site-packages/examples/pub_sub/pub_client.py'...
***   File "./lib/python3.5/site-packages/examples/pub_sub/pub_client.py", line 11
    print "Client received {0} messages".format(total)
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/examples/req_res'...
Compiling './lib/python3.5/site-packages/examples/req_res/client.py'...
***   File "./lib/python3.5/site-packages/examples/req_res/client.py", line 8
    print client.get(executable='ping')
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/examples/taskqueue'...
Compiling './lib/python3.5/site-packages/examples/taskqueue/multi.py'...
***   File "./lib/python3.5/site-packages/examples/taskqueue/multi.py", line 6
    print "executing task"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/taskqueue/proxy.py'...
***   File "./lib/python3.5/site-packages/examples/taskqueue/proxy.py", line 6
    print "executing task"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/examples/taskqueue/standalone.py'...
***   File "./lib/python3.5/site-packages/examples/taskqueue/standalone.py", line 6
    print "executing task"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/nanomsg'...
Listing './lib/python3.5/site-packages/nanomsg-1.0.egg-info'...
Listing './lib/python3.5/site-packages/nanomsg_wrappers'...
Listing './lib/python3.5/site-packages/omnomnom'...
Listing './lib/python3.5/site-packages/omnomnom/generics'...
Listing './lib/python3.5/site-packages/omnomnom/generics/micro'...
Listing './lib/python3.5/site-packages/omnomnom/generics/taskqueue'...
Listing './lib/python3.5/site-packages/omnomnom/runners'...
Compiling './lib/python3.5/site-packages/omnomnom/runners/run_service.py'...
***   File "./lib/python3.5/site-packages/omnomnom/runners/run_service.py", line 58
    print targets
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/omnomnom-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
